{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 29,
  "lineage": "78f6f36b-7d01-c50a-79f7-a7e3a833b42b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b658356f296c8d1",
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:elastic-ip/eipalloc-09b658356f296c8d1",
            "association_id": "eipassoc-03eefb6a1e8105156",
            "domain": "vpc",
            "id": "eipalloc-09b658356f296c8d1",
            "instance": "i-05baced0b1cf7dbc8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0718fb56dfff4bfe6",
            "private_dns": "ip-10-0-1-199.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-13-124-140-110.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.140.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "likelion-terraform-eip"
            },
            "tags_all": {
              "Name": "likelion-terraform-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.likelion-terraform",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "likelion-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f71f215b23ba262",
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:instance/i-05baced0b1cf7dbc8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05baced0b1cf7dbc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "likelion-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0718fb56dfff4bfe6",
            "private_dns": "ip-10-0-1-199.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-43-201-57-106.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.57.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf60bb91c9df0ea2",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d725f7215b9a23fd",
            "tags": {
              "Name": "likelion-terraform-server"
            },
            "tags_all": {
              "Name": "likelion-terraform-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0159afda74dedacec"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:internet-gateway/igw-06ab1a8c4ae5a5f39",
            "id": "igw-06ab1a8c4ae5a5f39",
            "owner_id": "832976099513",
            "tags": {
              "Name": "likelion-terraform-igw"
            },
            "tags_all": {
              "Name": "likelion-terraform-igw"
            },
            "vpc_id": "vpc-019aaf3a8889559ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:route-table/rtb-08134461e5de47533",
            "id": "rtb-08134461e5de47533",
            "owner_id": "832976099513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ab1a8c4ae5a5f39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "likelion-terraform-rt"
            },
            "tags_all": {
              "Name": "likelion-terraform-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-019aaf3a8889559ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09417be7875d99ba5",
            "route_table_id": "rtb-08134461e5de47533",
            "subnet_id": "subnet-0d725f7215b9a23fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:security-group/sg-0159afda74dedacec",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0159afda74dedacec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "likelion-terraform-sg",
            "name_prefix": "",
            "owner_id": "832976099513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "likelion-terraform-sg"
            },
            "tags_all": {
              "Name": "likelion-terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-019aaf3a8889559ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:subnet/subnet-0d725f7215b9a23fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d725f7215b9a23fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832976099513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "likelion-terraform-subnet"
            },
            "tags_all": {
              "Name": "likelion-terraform-subnet"
            },
            "vpc_id": "vpc-019aaf3a8889559ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:832976099513:vpc/vpc-019aaf3a8889559ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b0ecb654ae67461",
            "default_route_table_id": "rtb-0a6a27043449212f8",
            "default_security_group_id": "sg-0334e93c65c34936a",
            "dhcp_options_id": "dopt-027a82f0482159726",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019aaf3a8889559ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6a27043449212f8",
            "owner_id": "832976099513",
            "tags": {
              "Name": "likelion-terraform-vpc"
            },
            "tags_all": {
              "Name": "likelion-terraform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}